# vocal-salon-booking

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  audio_store.py  auth.py  circuit_breaker.py  config.py  conversation.py  database.py  email_sender.py  intent.py  llm_conversation.py  llm_intent.py  main.py  migrations.py  models.py  observability.py  providers.py  purge.py  rate_limit.py  reminder.py  salon_info.py  schemas.py  seed.py  session_store.py  settings_service.py  slot_engine.py  smoke_test.py  sms_sender.py  telephony_adapter.py  telephony_simulator.py  tenant_service.py  tts_artifact_store.py  twiml.py  voice_schemas.py
app/demo/: __init__.py  __main__.py  scenarios.py  (+1 more)
docs/: ARCHITECTURE.md  BUSINESS_CASE.md  DEMO_SCRIPT.md  N8N_WORKFLOW_REDESIGN.md  PHASE3_VOICE_LOOP.md  PHASE4_2_DEMO_FLOW.md  PLAN_DE_BATAILLE.md  RUNBOOK.md  TELEPHONY_BRIDGE.md  VIDEO_ANALYSIS.md  VIDEO_COMMENTS_INSIGHTS.md  VOICE_PIPELINE.md
scripts/: audit_marine.py  create_tenant.py  import_tenant_data.py  reset_db.py
tests/: conftest.py  test_audio_path.py  test_availability.py  test_bookings.py  test_circuit_breaker.py  test_conversation.py  test_demo.py  test_employees.py  test_health.py  test_intent.py  test_llm_intent.py  test_llm_tools.py  test_observability.py  test_ops.py  test_persistence.py  test_provider_readiness.py  test_provider_smoke.py  test_providers.py  test_services.py  test_telephony_adapter.py  test_telephony_simulator.py  test_tts_artifact_store.py  test_twilio_consent.py  test_voice.py  test_voice_turn.py
(+22 files in other folders)
