[project]
name = "vocal-salon-api"
version = "0.1.0"
description = "API backend for Maison Éclat salon booking – vocal AI agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "python-dateutil>=2.9,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29,<1"]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.3,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
